Alexander Kiselyov, Stage 1 (#13)
* Initial commit

* Codeclimate fixes

* Some fixes

Co-authored-by: Artyom Drozdov <artyomcool2@gmail.com>