@@ -44,3 +44,15 @@ checkstyle {
     configFile = new File("checkstyle.xml")
     checkstyleTest.enabled = false
 }
+
+compileJava {
+    options.compilerArgs += ["--add-modules", "jdk.incubator.foreign"]
+}
+
+compileTestJava {
+    options.compilerArgs += ["--add-modules", "jdk.incubator.foreign"]
+}
+
+test {
+    jvmArgs += ["--add-modules", "jdk.incubator.foreign"]
+}
